# bind-java-rs

./: Cargo.toml  rustfmt.toml
bind/: Cargo.toml
bind-marco/: Cargo.toml
bind-marco/src/: annotation.rs  argument.rs  class.rs  file.rs  lib.rs  member.rs  member_impl.rs  member_impl_bind.rs  member_struct.rs  modifier.rs  repeat.rs  signature.rs  types.rs
bind/src/: bind.rs  binding.rs  call.rs  frame.rs  from.rs  func.rs  into.rs  invoke.rs  lib.rs  loader.rs
example/: Cargo.toml
example/src/: main.rs  test.rs  vm.rs
