[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
bind-java = { path = "../bind" }
jni-sys = "0.3"
jni = { version = "0.21", features = ["invocation"] }

[dev-dependencies]
reqwest = "0.11"
tokio = { version = "1.32", features = ["rt", "net"] }
tempdir = "0.3"
rand = "0.8"
